<resources>
    <string name="app_name">ContactBookFinalProject</string>
    <string name="titleBox">The Friend Files</string>
    <string name="viewBtn">View Contacts</string>
    <string name="creatNewBtn">Create New</string>
    <string name="contactListTitle">Contact List</string>
    <string name="createAndEdit">Create and Edit</string>
    <string name="nameBox">Name</string>
    <string name="nameEditHint">Angelo Martinez</string>
    <string name="phoneNumBox">Phone Number</string>
    <string name="phoneHint">222-222-2200</string>
    <string name="addressBox">Street Address</string>
    <string name="addressHint">710 Ash Lane</string>
    <string name="emailBox">Email Address</string>
    <string name="emailHint">hithere@gmail.com</string>
    <string name="birthdayBox">Birthday</string>
    <string name="birthdayHint">April 27, 2000</string>
    <string name="saveContact">Save</string>
    <string name="deleteContact">Delete</string>
</resources>